# temple-registration-service

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
app/: main.py  models.py
app/api/: router.py
app/api/routes/: health.py  signup_requests.py
app/core/: config.py  database.py
app/schemas/: signup_request.py
app/services/: signup_requests.py
tests/: test_health.py  test_signup_requests.py
