[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temple-registration-service"
version = "0.1.0"
description = "Signup request management service for temple onboarding"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi>=23,<24",
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.4,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
